--- a/Authors
+++ b/Authors
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed to the simple_shell.
 
 Gerald Majoni <majonigerald@gmail.com>
-Gladwell Madziva <>
+Gladwell Madziva <ernestgladwell@gmail.com>
